# Radix-bench

./: .gitignore  CMakeLists.txt  README.md  README_benchmark.md  avl.h  benchmark.cpp  benchmark_getFirstSetBit.c  benchmark_results.md  radix_new.c  radix_new.h  test_object_pool.c  test_pool_growth.c  test_radix.c  test_radix_new.c  test_wide_radix.c  utils_types.h  wide_radix.c  wide_radix.h
